chore: fix signature on mobile

--- a/src/views/collections/framework-field-guide/components/your-guide-text-container-back.module.scss
+++ b/src/views/collections/framework-field-guide/components/your-guide-text-container-back.module.scss
@@ -163,6 +163,7 @@
 
 .signature {
 	height: 6rem;
+	max-width: 100%;
 	position: relative;
 	z-index: 2;
 	padding-top: 0.75rem;
